--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     </div>
     <p>Score: <span id="scoreSpan"></span></p>
     <p>Click for jumping. Easy peasy, right?</p>
+   
+    <div class="menu">
+        <h1 class="Title">Menu</h1>
+        <ul></ul>
+            <li class="button button -- scores">Scores</li>
+            <li class="button button -- about">About</li>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
