--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <title>Jumping Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="g-body">
     <div class="game">
         <div id="character"></div>
         <div id="block"></div>
     </div>
-    <p>Score: <span id="scoreSpan"></span></p>
-    <p>Click for jumping. Easy peasy, right?</p>
-   
+  
     <div class="menu">
-        <h1 class="Title">Menu</h1>
+        <h1 class="title">Menu</h1>
         <ul></ul>
-            <li class="button button -- scores">Scores</li>
-            <li class="button button -- about">About</li>
+            <li class="button button--scores">Scores</li>
+            <li class="button button--about">About</li>
     </div>
+
+    <p>Score: <span id="scoreSpan"></span><br>Click for jumping. Easy peasy, right?</p>
 </body>
 <script src="script.js"></script>
 </html>
