--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
   
     <div class="menu">
-        <h1 class="title">Menu</h1>
+        <h1 class="title">Jumping Game</h1>
         <ul></ul>
             <li class="button button--scores">Scores</li>
             <li class="button button--about">About</li>
